# elasticsearch7-mcp-server-py

./: README.md  pyproject.toml
src/es_client/: client.py  helper.py
src/mcp_server_elasticsearch/: __init__.py  __main__.py  clusters_information.py  stdio_server.py  streaming_server.py
src/tools/: config.py  tool_filter.py  tool_generator.py  tool_params.py  tools.py  utils.py
